2017-03-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/thermodynamics.py (density):

	Improved docstring with example and cross-reference.

	* typhon/legacy: Removed (empty) legacy directory.

2017-03-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/spectroscopy.py (linewidth):

	Improved docstring and added example.

	* typhon/tests/test_spectroscopy.py:

	Added test method for the calculations of linewidth (FWHM).

2017-03-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py: Fixed input types in all docstrings.

	(vmr, relative_humidity)

	Fixed copy & paste remains in docstrings.

	Added examples and cross-references to typhon functions.

	* typhon/tests/test_atmosphere.py:

	Added test methods for VMR and relative humidity calculations.

2017-03-15  Gerrit Holl  <g.holl@reading.ac.uk:

	* typhon/datasets/tovs.py(as_xarray_dataset):

	- Exempt bitfield from forced float conversation, bitfields never need
	flagging (actually they usually tell why we flagged at all).

2017-03-14  Gerrit Holl  <g.holl@reading.ac.uk>

	* datasets/dataset.py(DatasetDeque.move):

	- Workaround for xarray bug causing encoding to be lost upon
	concatenation https://github.com/pydata/xarray/issues/1297

2017-03-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py (print_timing):

	The decorator preserves the original function signature and docstrings.

	* typhon/atmosphere.py (vmr):

	Calculate VMR for given relative humidity, pressure and temperature.

	* doc/typhon.atmosphere.rst: Added `vmr` to documentation.

2017-03-13  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS.as_xarray_dataset):

	Convert ints to floats so that I can use nans for masking, as xarray
	does not support masking otherwise.

	* typhon/physics/units/em.py(SRF.estimate_band_coefficients):

	- Use band coefficients from file for now, ad-hoc solution.

	* typhon/physics/units/tools.py(UnitsAwareDataArray):
